# Tagsistant

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  Contributors  Doxyfile  INSTALL  Makefile  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  libtool  prepare_commit.sh  prepare_revision.sh  tagsistant_control.txt
.externalToolBuilders/: Automatic Build Number Updater.launch
src/: Makefile  Makefile.am  Makefile.in  Session.vim  buildnumber.h  debug.h  debug_free_calls.h  deduplication.c  gmon.out  memdebug.pl  note_sugli_oggetti  operations_blueprint  path_resolution.c  path_resolution.h  plugin.c  plugin.h  rds.c  reasoner.c  sql.c  sql.h  tags  tagsistant  tagsistant.c  tagsistant.h  test_suite.pl  test_suite.pl.back  update_build_number.pl  utils.c
src/compat/: fuse_opt.c
src/fuse_operations/: access.c  chmod.c  chown.c  flush.c  getattr.c  getxattr.c  link.c  listxattr.c  mkdir.c  mknod.c  open.c  operations.h  read.c  readdir.c  readlink.c  release.c  removexattr.c  rename.c  rmdir.c  setxattr.c  statfs.c  statvfs.c  symlink.c  truncate.c  unlink.c  utime.c  write.c
src/plugins/: Makefile  Makefile.am  Makefile.in  tp_filename.c  tp_filename_rx.c  tp_generic.c  tp_gif.c  tp_html.c  tp_jpeg.c  tp_mp3.c  tp_ogg.c  tp_pdf.c  tp_photo.c  tp_png.c  tp_xml.c
