lib_LTLIBRARIES = libtagsistant_generic-0.1.la 
libtagsistant_generic_0_1_la_SOURCES = ../tagsistant.h tp_generic.c
libtagsistant_generic_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`

lib_LTLIBRARIES += libtagsistant_photo-0.1.la
libtagsistant_photo_0_1_la_SOURCES = ../tagsistant.h tp_photo.c
libtagsistant_photo_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_photo_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

lib_LTLIBRARIES += libtagsistant_jpeg-0.1.la
libtagsistant_jpeg_0_1_la_SOURCES = ../tagsistant.h tp_jpeg.c
libtagsistant_jpeg_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_jpeg_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

lib_LTLIBRARIES += libtagsistant_ogg-0.1.la libtagsistant_mp3-0.1.la
libtagsistant_ogg_0_1_la_SOURCES = ../tagsistant.h tp_ogg.c
libtagsistant_ogg_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_ogg_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

libtagsistant_mp3_0_1_la_SOURCES = ../tagsistant.h tp_mp3.c
libtagsistant_mp3_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_mp3_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

lib_LTLIBRARIES += libtagsistant_html-0.1.la
libtagsistant_html_0_1_la_SOURCES = ../tagsistant.h tp_html.c
libtagsistant_html_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_html_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

lib_LTLIBRARIES += libtagsistant_xml-0.1.la
libtagsistant_xml_0_1_la_SOURCES = ../tagsistant.h tp_xml.c
libtagsistant_xml_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_xml_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

lib_LTLIBRARIES += libtagsistant_gif-0.1.la
libtagsistant_gif_0_1_la_SOURCES = ../tagsistant.h tp_gif.c
libtagsistant_gif_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_gif_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

lib_LTLIBRARIES += libtagsistant_png-0.1.la
libtagsistant_png_0_1_la_SOURCES = ../tagsistant.h tp_png.c
libtagsistant_png_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_png_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`

lib_LTLIBRARIES += libtagsistant_pdf-0.1.la
libtagsistant_pdf_0_1_la_SOURCES = ../tagsistant.h tp_pdf.c
libtagsistant_pdf_0_1_la_CFLAGS = `pkg-config --cflags glib-2.0`
libtagsistant_pdf_0_1_la_LDFLAGS = `pkg-config --libs glib-2.0`
